[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ascent-rl"
version = "0.1.0"
description = "Tabular reinforcement learning (Q-Learning / SARSA) on MountainCar"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrea Montana" }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["ascent*"]
